Describe what you updated

--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
     <nav class="navbar">
         <div class="logo">🏗️ BuildPro</div>
         <ul class="nav-links">
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="services.html" class="active">Services</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="estimates.html">Get a Quote</a></li>
