--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
   <nav class="navbar">
     <div class="logo">🏗️ BuildPro</div>
     <ul class="nav-links">
-      <li><a href="home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="projects.html">Projects</a></li>
       <li><a href="estimates.html">Get a Quote</a></li>
