--- a/estimates.html
+++ b/estimates.html
@@ -15,7 +15,7 @@
   <nav class="navbar">
     <div class="logo">🏗️ BuildPro</div>
     <ul class="nav-links">
-      <li><a href="home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="projects.html">Projects</a></li>
       <li><a href="estimates.html" class="active">Get a Quote</a></li>
@@ -75,7 +75,7 @@
 
  <!-- Thank You Popup -->
 <div id="thank-you-popup" class="thank-you-popup">
-    <p>Thank you for your request! We will get back to you shortly.</p>
+    <p>Thank you for your request! We will get back to you on your email .</p>
     <button id="close-popup" class="popup-btn">Close</button>
 </div>
 
