Describe what you updated

--- a/services.html
+++ b/services.html
@@ -26,44 +26,52 @@
     <!-- Services Section -->
     <section class="services">
         <h2 class="animate__animated animate__fadeInUp">Our Services</h2>
-        <p class="service-intro animate__animated animate__fadeInUp">We provide top-tier construction services, from design to execution.</p>
+        <p class="service-intro animate__animated animate__fadeInUp">
+            We provide top-tier construction services, from design to execution.
+        </p>
         
         <div class="service-grid">
-            <div class="service-card animate__animated animate__zoomIn">
+            <!-- Architectural Design -->
+            <a href="service-architecture.html" class="service-card animate__animated animate__zoomIn">
                 <img src="assets/images/design.jpg" alt="Architectural Design">
                 <h3>Architectural Design</h3>
                 <p>Innovative and modern designs tailored to your vision.</p>
-            </div>
+            </a>
 
-            <div class="service-card animate__animated animate__zoomIn">
+            <!-- Construction -->
+            <a href="service-construction.html" class="service-card animate__animated animate__zoomIn">
                 <img src="assets/images/construction.jpeg" alt="Construction & Execution">
                 <h3>Construction & Execution</h3>
                 <p>High-quality construction with durable materials and expert craftsmanship.</p>
-            </div>
+            </a>
 
-            <div class="service-card animate__animated animate__zoomIn">
+            <!-- Interior Design -->
+            <a href="service-interior.html" class="service-card animate__animated animate__zoomIn">
                 <img src="assets/images/interior.avif" alt="Interior Design">
                 <h3>Interior Design</h3>
                 <p>Stylish interiors that reflect your taste and lifestyle.</p>
-            </div>
+            </a>
 
-            <div class="service-card animate__animated animate__zoomIn">
+            <!-- Renovation -->
+            <a href="service-renovation.html" class="service-card animate__animated animate__zoomIn">
                 <img src="assets/images/renovation.jpeg" alt="Renovation">
                 <h3>Renovation & Remodeling</h3>
                 <p>Transform your existing space into something extraordinary.</p>
-            </div>
+            </a>
 
-            <div class="service-card animate__animated animate__zoomIn">
+            <!-- Landscaping -->
+            <a href="service-landscaping.html" class="service-card animate__animated animate__zoomIn">
                 <img src="assets/images/landscape.jpeg" alt="Landscaping">
                 <h3>Landscaping</h3>
                 <p>Enhance your outdoor spaces with stunning landscape designs.</p>
-            </div>
+            </a>
 
-            <div class="service-card animate__animated animate__zoomIn">
+            <!-- Project Estimation -->
+            <a href="service-estimation.html" class="service-card animate__animated animate__zoomIn">
                 <img src="assets/images/quote.webp" alt="Project Estimation">
                 <h3>Project Estimation</h3>
                 <p>Accurate cost estimation to plan your budget efficiently.</p>
-            </div>
+            </a>
         </div>
     </section>
 
